--- a/products/sodas.html
+++ b/products/sodas.html
@@ -7,59 +7,51 @@
     <title>Arma tu pedido</title>
 </head>
 <body>
-        <!-- Navegación -->
-  <header role="banner">
-    <div class="name" aria-label = "Nuestro nombre">K.O. Burguers</div> 
-
-    <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
-      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img">
-    </a>
-    
-    <nav role="navigation" aria-label="">
-      <ul class="nav_link">
-        <li>
-          <a class="contact" href="/contact.html" aria-label="Contáctanos">
-            <span aria-hidden="true">Contáctanos</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Navegación -->
+    <header role="banner">
+        <div class="name" aria-label="Nuestro nombre">K.O. Burgers</div> 
+        <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
+            <img src="/img/logo_ko.png" alt="Logo de K.O. Burgers" role="presentation" class="logo_img">
+        </a>
+        <nav role="navigation" aria-label="Navegación principal">
+            <ul class="nav_link">
+                <li>
+                    <a class="contact" href="/contact.html" aria-label="Contáctanos">
+                        <span aria-hidden="true">Contáctanos</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <h1>ESCOGE TUS BEBIDAS</h1>
 
-    <form id="formulario" action="#" method="post">
+    <form id="formulario" action="#" method="post" role="form">
         <fieldset>
             <legend>Selecciona tus bebidas y cantidades</legend>
 
             <!-- Limonada -->
-            <img aria-hidden="true" src="/img/limonada.jpg" width="200">
-            <p > Limonada $25</p>
-            <label aria-hidden="true" for="cantidad_limonada">Cantidad</label>
-            <input aria-label="Introduce la cantidad de Limonada" type="number" id="cantidad_limonada" name="cantidad_limonada" min="0" value="">
+            <img src="/img/limonada.jpg" alt="Bebida de limonada fresca" width="200">
+            <p>Limonada $25</p>
+            <label for="cantidad_limonada">Cantidad</label>
+            <input type="number" id="cantidad_limonada" name="cantidad_limonada" min="0" value="" aria-label="Introduce la cantidad de limonada">
 
             <!-- Jamaica -->
-            <img aria-hidden="true" src="/img/jamaica.jpg" width="200">
-            <p > Jamaica $25 </p>
-            <label aria-hidden="true" for="cantidad_jamaica">Cantidad</label>
-            <input aria-label="Introduce la cantidad de Jamaica" type="number" id="cantidad_jamaica" name="cantidad_jamaica" min="0" value="">
+            <img src="/img/jamaica.jpg" alt="Bebida de Jamaica fresca" width="200">
+            <p>Jamaica $25</p>
+            <label for="cantidad_jamaica">Cantidad</label>
+            <input type="number" id="cantidad_jamaica" name="cantidad_jamaica" min="0" value="" aria-label="Introduce la cantidad de Jamaica">
 
             <!-- Horchata -->
-            <img aria-hidden="true" src="/img/horchata.jpg" width="200">
-            <p > Horchata $25 </p>
-            <label aria-hidden="true" for="cantidad_horchata">Cantidad</label>
-            <input aria-label="Introduce la cantidad de Horchata" type="number" id="cantidad_horchata" name="cantidad_horchata" min="0" value="">
+            <img src="/img/horchata.jpg" alt="Bebida de Horchata fresca" width="200">
+            <p>Horchata $25</p>
+            <label for="cantidad_horchata">Cantidad</label>
+            <input type="number" id="cantidad_horchata" name="cantidad_horchata" min="0" value="" aria-label="Introduce la cantidad de Horchata">
 
-            <a href="burgers.html">
-            <button type="button">Comprar hamburguesas</button>
-            </a>
-            <a href="desserts.html">
-            <button type="button">Comprar papas</button>
-            </a>
-            <a href="/order.html">
-            <button type="button">Pagar los productos seleccionados</button>
-            </a>
-            
+            <!-- Botones de acción -->
+            <button type="button" aria-label="Comprar hamburguesas" onclick="window.location.href='burgers.html'">Comprar hamburguesas</button>
+            <button type="button" aria-label="Comprar papas" onclick="window.location.href='desserts.html'">Comprar papas</button>
+            <button type="button" aria-label="Pagar los productos seleccionados" onclick="window.location.href='/order.html'">Pagar los productos seleccionados</button>
         </fieldset>
     </form>
 </body>
