cambio en navbar

--- a/products/burgers.html
+++ b/products/burgers.html
@@ -9,21 +9,14 @@
 <body>
     <!-- Navegación -->
     <header role="banner">
-        <div class="name" aria-label="Nuestro nombre">K.O. Burgers</div> 
-        <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
-            <img src="/img/logo_ko.png" alt="Logo de K.O. Burgers" role="presentation" class="logo_img">
-        </a>
-        <nav role="navigation" aria-label="Navegación principal">
-            <ul class="nav_link">
-                <li>
-                    <a class="contact" href="/contact.html" aria-label="Contáctanos">
-                        <span aria-hidden="true">Contáctanos</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
+    
+        <il>
+            <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
+              <img src="/img/logo_ko.png" alt="Ir a la página de inicio" role="presentation" class="logo_img">
+            </a>
+        </il>
+      </header>
+      
     <h1>ARMA TU PEDIDO</h1>
 
     <form id="formulario" action="#" method="post" role="form">
