--- a/index.html
+++ b/index.html
@@ -10,21 +10,12 @@
 
      <!-- Navegación -->
   <header role="banner">
-    <div class="name" aria-label = "Nuestro nombre">K.O. Burguers</div> 
-
-    <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
-      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img">
-    </a>
     
-    <nav role="navigation" aria-label="">
-      <ul class="nav_link">
-        <li>
-          <a class="contact" href="/contact.html" aria-label="Contáctanos">
-            <span aria-hidden="true">Contáctanos</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <il>
+        <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
+          <img src="/img/logo_ko.png" alt="Ir a la página de inicio" role="presentation" class="logo_img">
+        </a>
+    </il>
   </header>
 
   <main id="main-content" role="main">
