--- a/payment.html
+++ b/payment.html
@@ -8,23 +8,14 @@
 </head>
 <body>
 <!-- Navegación -->
-  <header role="banner">
-    <div class="name" aria-label = "Nuestro nombre">K.O. Burguers</div> 
-
-    <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
-      <img src="/img/logo_ko.png" alt="" role="presentation" class="logo_img">
-    </a>
+<header role="banner">
     
-    <nav role="navigation" aria-label="">
-      <ul class="nav_link">
-        <li>
-          <a class="contact" href="/contact.html" aria-label="Contáctanos">
-            <span aria-hidden="true">Contáctanos</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <il>
+      <a href="/index.html" class="logo" aria-label="Ir a la página de inicio">
+        <img src="/img/logo_ko.png" alt="Ir a la página de inicio" role="presentation" class="logo_img">
+      </a>
+  </il>
+</header>
 
   <label class="menu-icon" aria-label="Abrir menú de navegación">*Le recomendamos leer nuestros terminos y condiciones antes de ingresar sus datos*</label>
 
